--- a/src/index.html
+++ b/src/index.html
@@ -22,60 +22,7 @@
 	</div>
 </div>
 
-<!--VIEW -->
-		
-<div ng-controller='FeaturedProductController'>
-<section class="destacados">
-	<div class="container ">
-		<h2>{{ title }}</h2>
-		<div class="destacados--container">
-			<article class="destacado" ng-repeat="feature in featuredProducts">
-				<img class="destacado--img" ng-src="{{feature.imagen}}" alt="">
-				<div class="destacado--description">
-					<h4 class="destacado--title">{{feature.title}}</h4>
-					<div class="destacado--price">
-						${{feature.precio}}
-					</div>
-				</div>
-				<div class="rating rating-destacado">
-				  <div class="stars stars-destacado">
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star"></a>
-				    <a class="star"></a>
-				  </div>
-				</div>
-			</article>
-		</div>
-	</div>
-</section>
-</div>
-
-<div ng-controller="ListProductController">
-	<section>
-		<div class="container">
-			<h2>{{ title }}</h2>
-			<figure class="product-card" ng-repeat="product in products">
-			  <img ng-src="{{ product.image }}" alt="sample57" />
-			  <figcaption>
-			    <h3>{{ product.title }}</h3>
-			    <div class="price">${{ product.precio }}</div>
-			  </figcaption>
-			  <div class="rating">
-				  <div class="stars">
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star rated"></a>
-				    <a class="star"></a>
-				    <a class="star"></a>
-				  </div>
-				</div>
-			</figure>
-		</div>
-	</section>
-</div>
-<!-- FIN VIEW -->
+<ui-view></ui-view>
 
 </body>
 </html>
